Added template to projects page

--- a/index.html
+++ b/index.html
@@ -50,14 +50,14 @@
               <h3 class="masthead-brand">William Black</h3>
               <nav>
                 <ul class="nav masthead-nav">
-                  <li class="active"><a href="#">Home</a></li>
-                  <li><a href="#">Projects</a></li>
+                  <li class="active"><a href="index.html">Home</a></li>
+                  <li><a href="projects.html">Projects</a></li>
                   <li><a href="#">Blog</a></li>
                   <li><a href="#">Resume</a></li>
                 </ul>
               </nav>
             </div>
-          </div>
+          </div><!-- .masthead.clearfix -->
 
           <!-- Content -->
           <div class="inner cover">
@@ -101,18 +101,15 @@
               <!-- About Blurb -->
               <div class="col-md-6">
                 <h2 class="cover-heading">About Me</h2>
-                <p class="lead">Here is a short blurb about me.</p>
+                <p class="lead">I'm currently a student at Clemson University,
+                pursuing a Bachelor's degree in Computer Science.
+                </p>
+                <p class="lead">I really enjoy developing websites, frontend and
+                  backend using a variety of frameworks including Django, Ruby on
+                  Rails, and various others.</p>
               </div>
             </div><!-- .row -->
-            <!--
-            <h1 class="cover-heading">Welcome to the Portfolio of Will Black</h1>
-            <p class="lead">Insert a simple bio here about myself.</p>
-            <p class="lead">
-              <a href="#" class="btn btn-lg btn-default">Learn More</a>
-            </p>
-            -->
-
-          </div>
+          </div><!-- .inner-cover -->
 
           <!-- Footer -->
           <div class="mastfoot">
