--- a/projects.html
+++ b/projects.html
@@ -63,16 +63,61 @@
           <!-- Content -->
           <div class="inner cover">
             <h1 class="cover-heading">Projects</h1>
-            <hr class="style-two">
 
+            <!-- SRX site -->
             <div class="row">
               <div class="col-md-6">
-                <h2 class="lead">col1</h2>
+                <h2 class="lead">Speedrunning Expo Website</h2>
+                <!-- <p>Picture Here!</p> -->
+                <a href="http://srx.nfshost.com/">URL</a>
               </div>
               <div class="col-md-6">
-                <h2 class="lead">col2</h2>
+                <h2 class="lead">About the SRX site</h2>
+                <p>I built this site using Django 1.10 with a MariaDB database.
+                I also designed the frontend while using customized BootStrap CSS as well.</p>
               </div>
             </div>
+
+            <hr class="style-two">
+
+            <!-- RoR site -->
+            <div class="row">
+              <div class="col-md-6">
+                <h2 class="lead">Rails Alpha Blog</h2>
+                <!-- <p>Picture here!</p> -->
+                <a href="https://github.com/wrblack/alpha-blog">Github Repo</a>
+              </div>
+              <div class="col-md-6">
+                <h2 class="lead">About the Rails Alpha Blog</h2>
+                <p>This is a project I built while learning about the workflow
+                for certain Ruby on Rails projects. With much of the guidance
+                taken from the Michael Hartl's excellent Rails tutorial site.</p>
+              </div>
+            </div>
+
+            <hr class="style-two">
+
+            <!-- authtool -->
+            <div class="row">
+              <div class="col-md-6">
+                <h2 class="lead">Auth Tool</h2>
+                <!-- <p>Picture here!</p> -->
+                <a href="https://github.com/wrblack/authtool">Github Repo</a>
+              </div>
+              <div class="col-md-6">
+                <h2 class="lead">About the Auth Tool</h2>
+                <p>This project is implemented in HTML5/CSS3 using BootStrap and PHP5.
+                This was an interesting project since I did not have access to the
+                database schema till much later.</p>
+              </div>
+            </div>
+
+            <!-- more projects I haven't listed ...yet
+              https://github.com/wrblack/simple_jumper
+              https://github.com/wrblack/temp-by-zip
+              https://github.com/wrblack/csr_bot
+            -->
+
             <!--
             <p class="lead">Cover is a one-page template for building simple and beautiful home pages. Download, edit the text, and add your own fullscreen background photo to make it your own.</p>
             <p class="lead">
