removed some text for style spacing; it was cramped

--- a/projects.html
+++ b/projects.html
@@ -62,7 +62,7 @@
 
           <!-- Content -->
           <div class="inner cover">
-            <h1 class="cover-heading">Projects</h1>
+            <!-- <h1 class="cover-heading">Projects</h1> -->
 
             <!-- SRX site -->
             <div class="row">
@@ -90,8 +90,7 @@
               <div class="col-md-6">
                 <h2 class="lead">About the Rails Alpha Blog</h2>
                 <p>This is a project I built while learning about the workflow
-                for certain Ruby on Rails projects. With much of the guidance
-                taken from the Michael Hartl's excellent Rails tutorial site.</p>
+                for certain Ruby on Rails projects. An exercise in blog building.</p>
               </div>
             </div>
 
@@ -106,9 +105,8 @@
               </div>
               <div class="col-md-6">
                 <h2 class="lead">About the Auth Tool</h2>
-                <p>This project is implemented in HTML5/CSS3 using BootStrap and PHP5.
-                This was an interesting project since I did not have access to the
-                database schema till much later.</p>
+                <p>This project is implemented in HTML5/CSS3 using BootStrap and PHP5 used
+                for professors utilizing tracker systems.</p>
               </div>
             </div>
 
